scrollbar alignment fixes, and container for RTSS charts.

--- a/src/internal-packages/database/styles/index.less
+++ b/src/internal-packages/database/styles/index.less
@@ -9,10 +9,10 @@
 
 .collections-table {
   background-color: @gray8;
-  overflow: scroll;
-  padding: 32px 20px 100px 20px;
+  overflow-y: scroll;
+  padding: 0 20px 100px 20px;
   position: absolute;
-  top: 46px;
+  top: 78px;
   right: 0;
   bottom: 0;
   left: 250px;
