--- a/src/internal-packages/indexes/styles/index.less
+++ b/src/internal-packages/indexes/styles/index.less
@@ -22,11 +22,7 @@
 
   .column-container {
     .column.main {
-      padding-top: 32px;
-
-      &::-webkit-scrollbar {
-        display: none;
-      }
+      margin-top: 32px;
     }
   }
 
