--- a/src/internal-packages/server-stats/styles/index.less
+++ b/src/internal-packages/server-stats/styles/index.less
@@ -12,6 +12,7 @@
   height: 100vh;
   min-width: 100%;
   overflow-x: scroll;
+  background-color: @gray8;
 
   ::-webkit-scrollbar {
     display: none;
