--- a/src/internal-packages/server-stats/styles/rt-lists.less
+++ b/src/internal-packages/server-stats/styles/rt-lists.less
@@ -3,15 +3,15 @@
 }
 .rt-perf {
   background-color: #3D4247;
+  border-radius: 12px;
   height: auto;
   overflow: scroll;
   padding-bottom: 100px;
-  padding-top: 32px;
   position: absolute;
-  top: 46px;
-  right: 0;
-  bottom: 0;
-  left: 250px;
+  top: 88px;
+  right: 10px;
+  bottom: 10px;
+  left: 260px;
 }
 
 .rt__lists-out {
