--- a/src/internal-packages/server-stats/styles/rtss-databases.less
+++ b/src/internal-packages/server-stats/styles/rtss-databases.less
@@ -1,9 +1,9 @@
 .rtss-databases {
   background-color: @gray8;
-  overflow: scroll;
-  padding: 32px 20px 100px 20px;
+  overflow-y: scroll;
+  padding: 0 20px 100px 20px;
   position: absolute;
-  top: 46px;
+  top: 78px;
   right: 0;
   bottom: 0;
   left: 250px;
